--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,5 @@
-bouncer_pass.txt
-identica_pass.txt
-proxy_pass.txt
-imgur_info.txt
-map_names.yml
-chanmirror.yml
 logs
-quotes.yml
-old_uri.yml
-config.yml
+*.yml
 *.log
 *.trn
 *.sqlite
