--- a/.screenrc
+++ b/.screenrc
@@ -15,7 +15,7 @@ acladd root
 
 sessionname failo
 screen -t bondage 0 bondage -d -w failo
-screen -t failo   1 pocoirc -c failo/failo_bot.yml
-screen -t hailo   2 pocoirc -c failo/failo_hailo.yml
+screen -t failo   1 pocoirc -f failo/failo_bot.yml
+screen -t hailo   2 pocoirc -f failo/failo_hailo.yml
 select 0
 detach
