The proxy is broken at the moment, disable it

--- a/.screenrc
+++ b/.screenrc
@@ -14,7 +14,7 @@ multiuser on
 acladd root
 
 sessionname failo
-screen -t bondage 0 bondage -d -w failo
-screen -t failo   1 pocoirc -f .pocoircrc.d/failo_bot.yml
+#screen -t proxy   0 pocoirc -f .pocoircrc.d/failo_proxy.yml
+screen -t bot     1 pocoirc -f .pocoircrc.d/failo_bot.yml
 select 0
 detach
