--- a/.screenrc
+++ b/.screenrc
@@ -19,6 +19,8 @@ zombie dr
 
 sessionname failo
 #screen -t proxy   0 pocoirc -f .pocoircrc.d/failo_proxy.yml
-screen -t bot     1 pocoirc -itv -f .pocoircrc.d/failo_bot.yml
+screen -t bot bash
+stuff "PERL5LIB=/usr/share/perl5 pocoirc -itv -f .pocoircrc.d/failo_bot.yml^M"
+
 select 0
 detach
